feat: upgrade ere-guests to v0.13.0
